# Dithering

./: .gitignore  CMakeLists.txt  Task.pro
src/: main.cpp
src/lib/: CMakeLists.txt  atkinson.cpp  atkinson.h  burkes.cpp  burkes.h  floyd_steinberg.cpp  floyd_steinberg.h  idither.cpp  idither.h  imagedithering.cpp  imagedithering.h  median_cut.cpp  median_cut.h  pixel.h  sierra.cpp  sierra.h
src/lib/include/: atkinson.h  burkes.h  floyd_steinberg.h  idither.h  median_cut.h  pixel.h  sierra.h
